# Learning-Explorations

./: .gitignore  404.html  Program.cs  README.md  arrays_and_strings_1_3.py  arrays_and_strings_1_4.py  arrays_and_strings_1_6.py  blending.py  blog.html  client.py  colors.py  config.py  constants.py  dynamic_connectivity.py  echo.py  foo.py  foo.txt  index.html  linked_lists.py  linked_lists_2_1.py  linked_lists_sandbox.py  main.py  markdown-page.html  package-lock.json  package.json  queues.py  queues_sandbox.py  readme.md  server.py  settings.py  sitemap.xml  stacks.py  stacks_sandbox.py  throwaway.js  trash.py  trees_boggle.py  trees_tree.py  url.py  user_boot.py  utilities.py  (+1 more)
2024-12-16-nextjs/: next.config.ts  package.json
2024_09_11 Godot Game Saves/: Control.gd  control.tscn  icon.svg.import
2024_09_23_mobx/: package-lock.json  package.json
2024_11_13_animation/: package.json
2024_11_13_canvas/: .prettierrc  package-lock.json  package.json
2024_11_13_gestures/: package.json
2024_11_15-nextjs-motion/: next.config.ts  package.json
2024_11_24-mobile_gestures/: package.json
2024_11_25_framer_motion/: package.json
2024_12_01_advent_of_code/: 02_02.py  05.md  (+6 more)
jupi/: Budget_-_Salaries.csv  Train my own data.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  pyproject.toml
jupi/.ipynb_checkpoints/: Train my own data-checkpoint.ipynb  Untitled-checkpoint.ipynb
poetry/poetry-demo/: pyproject.toml
poetry/poetry-demo/poetry_demo/: main.py
randomwalks/: pyproject.toml
randomwalks/randomwalks/: flips.py  flips_with_restart.py  randomwalks.py
(+1791 files in other folders)
