[tool.poetry]
name = "jupi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0"
pandas = "^0.25.2"
scipy = "^1.3"
numpy = "^1.17"
matplotlib = "^3.1"
sklearn = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
