[tool.poetry]
name = "randomwalks"
version = "0.1.0"
description = ""
authors = ["Travis Bumgarner <travis.bumgarner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
